# paideia

./: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  mkdocs.yml  paideia-idea.md  pyproject.toml
modules/examen/: README.md  pyproject.toml
modules/examen/docs/: bronze_layout.md
modules/examen/src/examen/: __init__.py  pipeline.py
modules/examen/templates/: quiz_column_map.yaml
modules/examen/tests/: __init__.py
modules/examen/tests/contract/: __init__.py  test_exam_draft_outputs.py  test_metadata_outputs.py
modules/examen/tests/fixtures/: ch10_sample.txt
modules/examen/tests/integration/: __init__.py  test_cli_build_e2e.py  test_us1_textbook_generation.py  test_us2_formative.py  test_us3_quiz_balance.py  test_us5_quality_report.py  test_us6_review.py  test_us7_emphasis.py
modules/examen/tests/unit/: __init__.py  test_backend.py  test_blueprint_bundle_itemgen.py  test_blueprint_solver.py  test_cli.py  test_config.py  test_convert_formative.py  test_determinism.py  test_groundedness_format.py  test_paths.py  test_quiz_parser.py  test_report_manifest.py  test_smoke.py  test_source_inventory.py  test_textbook_us1.py  test_vary_quiz.py
modules/immersio/: README.md  pyproject.toml
modules/immersio/docs/: axis-keys.md  email_profile_example.yaml  immersio-idea.md  test_profile_example.yaml
modules/immersio/scripts/: build_attendance_template.py
modules/immersio/src/immersio/: __init__.py  fonts.py
modules/immersio/templates/: attendance.xlsx
modules/immersio/tests/: conftest.py
modules/immersio/tests/fixtures/: _build_attendance_xlsx.py  _build_microbio_attendance.py  _build_microbio_omr.py  _build_omr_xls.py  build_silver_phase3.py  build_synthetic_44.py  legacy_xlsx_anchors.json
modules/immersio/tests/integration/: conftest.py  test_anatomy_full_run.py  test_archival.py  test_cli_exit_code_4.py  test_cli_path_validation.py  test_cli_smoke.py  test_distractor_labels_e2e.py  test_ingest_deterministic.py  test_ingest_failfast_atomicity.py  test_ingest_failfast_attendance_header.py  test_ingest_failfast_batch_collection.py  test_ingest_failfast_duplicate_id.py  test_ingest_failfast_exam_yaml_schema.py  test_ingest_failfast_item_count_mismatch.py  test_ingest_failfast_mapping_missing_axis.py  test_ingest_failfast_mapping_missing_column.py  test_ingest_failfast_undefined_likert.py  test_ingest_happy_path.py  test_ingest_portability.py  test_multi_semester.py  test_multiselect_new_options.py  test_omr_blank_vs_zero.py  test_perf_5s_sla.py  test_phase1_2_pipeline.py  test_phase8_adversary.py  test_quality_report_density.py
modules/immersio/tests/unit/: test_attendance_roster_only.py  test_discrimination.py  test_distractor_labels.py  test_exam_yaml_root_list.py  test_figures_determinism.py  test_histogram.py  test_item_stats.py  test_legacy_diff.py  test_mapping_loader.py  test_md_parser.py  test_md_writer.py  test_metadata_stats.py  test_normalize_encoding.py  test_normalize_likert.py  test_normalize_multiselect.py  test_normalize_student_id.py  test_omr_glob_spaces.py  test_omr_pattern_audit.py  test_omr_pattern_security.py  test_overall_summary.py  test_pdf_writer_determinism.py  test_property_idempotent.py  test_stat_tests.py  test_student_metrics.py  test_student_metrics_parquet.py  test_student_metrics_xlsx.py  test_timing.py  test_topic_alignment.py  test_xlsx_writer_determinism.py
modules/maieutica/: pyproject.toml
modules/maieutica/docs/: README.md  quickstart-validation.md
modules/maieutica/src/maieutica/: pipeline.py
modules/maieutica/templates/: formative_column_map.yaml  prompt_formative.txt  prompt_quiz.txt  quiz_column_map.yaml
modules/maieutica/tests/contract/: test_formative_xlsx.py  test_generation_spec_bound.py  test_quiz_upload_xls.py
modules/maieutica/tests/fixtures/: curriculum_map.yaml  generation_spec.yaml  multi_level_chapter.README.md  multi_level_chapter.txt
modules/maieutica/tests/integration/: test_determinism_v011.py  test_dry_run_degrade.py  test_edge_cases.py  test_us1_diversity.py  test_us1_quiz_build.py  test_us2_balance.py  test_us2_leap_fold.py  test_us3_anchor_report.py  test_us3_formative.py  test_us4_metadata_consistency.py  test_us5_review.py  test_us6_determinism.py  test_us6_dryrun_degrade.py  test_us6_examen_seam.py
modules/maieutica/tests/unit/: test_assign_subsections.py  test_backend.py  test_balance_answer_keys.py  test_bundle.py  test_bundle_subsection.py  test_candidate_yaml.py  test_chunk.py  test_chunk_multilevel.py  test_cli.py  test_dedup_anchor.py  test_determinism.py  test_determinism_properties.py  test_difficulty.py  test_evidence_index.py  test_format_checks.py  test_groundedness.py  test_groundedness_answer_anchor.py  test_paths.py  (+13 more)
modules/metric-codex/: README.md  pyproject.toml
modules/metric-codex/templates/: prompt_narrative.txt  question_set.example.yaml  성적출석_map.example.yaml  지도교수배정.example.yaml
modules/needs-map/: CHANGELOG.md  README.md  pyproject.toml
modules/needs-map/tests/: conftest.py
modules/retro-mester/: README.md  pyproject.toml
modules/retro-mester/tests/: __init__.py  conftest.py
shared/paideia_shared/: pyproject.toml
shared/paideia_shared/tests/: test_cluster_assignment.py  test_cluster_score_comparison.py  test_combined_analysis_manifest.py  test_combined_analysis_row.py  test_correlation_cell.py  test_diagnostic_mapping_v5_v6.py  test_examen_schemas.py  test_factor_scores.py  test_free_text_categorization.py  test_immersio_schemas_v1.py  test_ingest_manifest_audit.py  test_insufficient_evidence_unit.py  test_io_atomic.py  test_keyword_dictionary.py  test_maieutica_schemas.py  test_needs_map_manifest.py  test_regression_summary.py  test_scale_reliability.py  test_schemas_cohort_row.py  test_schemas_dispatch_log_row.py  test_schemas_email_enum.py  test_schemas_email_manifest.py  test_schemas_email_mapping_entry.py  test_schemas_email_message_draft.py  test_schemas_professor_profile.py  test_schemas_student_pdf_bundle.py  test_schemas_test_profile.py  test_schemas_validators.py  test_standard_axis_key.py  test_subgroup_score_comparison.py
(+644 files in other folders)
