[project]
name = "paideia"
version = "0.1.0"
description = "한 교과목의 학기 전 주기 데이터 시스템 — 6개 모듈의 우산 워크스페이스"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["modules/*", "shared/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "ANN"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["modules", "shared"]
