[project]
name = "paideia"
version = "0.1.0"
description = "한 교과목의 학기 전 주기 데이터 시스템 — 6개 모듈의 우산 워크스페이스"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["modules/*", "shared/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "ANN", "S108", "B007", "E501"]
"**/scripts/**" = ["ANN", "S101"]
"**/tests/fixtures/**" = ["ANN", "S101", "S108", "E501"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["modules", "shared"]
markers = [
    "roberta: needs-map v0.1.1 sentiment tests requiring searle-j/kote_for_easygoing_people cache + torch + transformers (skipped automatically when the cache is absent or the optional `roberta` extra is not installed)",
]
