[project]
name = "examen"
version = "0.1.0"
description = "시험 문제 초안 결정론적 출제 — paideia 모듈"
requires-python = ">=3.11"
dependencies = [
    "paideia-shared",
    "pydantic>=2.6",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pyyaml>=6",
    "pyarrow>=15",
    "anthropic",
    "instructor",
]

[project.scripts]
examen = "examen.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[tool.uv.sources]
paideia-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/examen"]
