[project]
name = "immersio"
version = "0.1.0"
description = "시험 결과 해석 + 학생 맞춤형 보고서 생성 — paideia 모듈"
requires-python = ">=3.11"
dependencies = [
    "paideia-shared",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pydantic>=2.6",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "reportlab>=4.0",
    "pyarrow>=15",
    "pyyaml>=6",
]

[project.scripts]
immersio = "immersio.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pypdf>=5.0",
]

[tool.uv.sources]
paideia-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/immersio"]
