[project]
name = "maieutica"
version = "0.1.0"
description = "교재 기반 주차별 퀴즈·형성평가 후보 생성 — paideia 모듈"
requires-python = ">=3.11"
dependencies = [
    "paideia-shared",
    "pydantic>=2.6",
    "pyyaml>=6",
    "openpyxl>=3.1",
    "xlwt>=1.3",
    "xlrd>=2.0",
    "anthropic",
    "pyarrow>=15",
]

[project.scripts]
maieutica = "maieutica.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[tool.uv.sources]
paideia-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maieutica"]
# [VERIFY wheel-build]: templates/ lives outside src/ and loads via
# Path(__file__); a wheel install would miss it. Current usage is editable
# uv-workspace only. If a wheel build is added, move templates/ into
# src/maieutica/ (like assets/) or use force-include.
