[project]
name = "metric-codex"
version = "0.1.0"
description = "학생별 학습역량 누적 기록 + 지도교수 근거 기반 질의 — paideia 모듈"
requires-python = ">=3.11"
dependencies = [
    "paideia-shared",
    "pydantic>=2.6",
    "pandas>=2.0",
    "pyarrow>=15",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pyyaml>=6",
    "anthropic>=0.97.0",
]

[project.scripts]
metric-codex = "metric_codex.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[tool.uv.sources]
paideia-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metric_codex"]
