[project]
name = "needs-map"
version = "0.1.0"
description = "사전진단 분석 모듈(척도 신뢰도·요인 점수·군집·자유서술·집단 분포 보고서·1인 1장 카드) — paideia 모듈"
requires-python = ">=3.11"
dependencies = [
    "paideia-shared",
    "pydantic>=2.6",
    "pandas>=2.0",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "reportlab>=4",
    "openpyxl>=3.1",
    "instructor>=1",
    "anthropic>=0.40",
    "pyyaml>=6",
    "python-dotenv>=1",
]

[project.optional-dependencies]
roberta = [
    "torch>=2.2",
    "transformers>=4.40",
    "tokenizers>=0.19",
]

[project.scripts]
paideia-needs-map = "needs_map.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pypdf>=6.10.2",
]

[tool.uv.sources]
paideia-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/needs_map"]
