[project]
name = "retro-mester"
version = "0.1.0"
description = "학기 회고(retrospective) 분석 파이프라인 — paideia 모듈"
requires-python = ">=3.11"
dependencies = [
    "paideia-shared",
    "pydantic>=2.6",
    "pandas>=2.0",
    "pyarrow>=15",
    "openpyxl>=3.1",
    "pyyaml>=6",
    "matplotlib>=3.8",
    "reportlab>=4",
    "anthropic",
    "instructor",
]

[project.scripts]
retro-mester = "retro_mester.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[tool.uv.sources]
paideia-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retro_mester"]
