[project]
name = "paideia-shared"
version = "0.1.0"
description = "Shared schemas and utilities for paideia modules"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6",
    "typing-extensions>=4.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paideia_shared"]

[tool.hatch.build.targets.wheel.force-include]
"src/paideia_shared/keywords/ko.yaml" = "paideia_shared/keywords/ko.yaml"
